tests/baselines/reference/numeric-separator-literal-dot-nsl-err.errors.txt
numeric-separator-literal-dot-nsl-err.ts(28,1): error TS1128: Declaration or statement expected.
numeric-separator-literal-dot-nsl-err.ts(28,2): error TS2304: Cannot find name '_'.


==== numeric-separator-literal-dot-nsl-err.ts (2 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not be the last digit character of a
      DecimalLiteral, nor adjacent to `.`
    info: |
      NumericLiteralSeparator ::
        _
    
      DecimalLiteral ::
        . DecimalDigits ExponentPart_opt
    
      DecimalDigits ::
        ...
        DecimalDigits NumericLiteralSeparator DecimalDigit
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    ._
    ~
!!! error TS1128: Declaration or statement expected.
     ~
!!! error TS2304: Cannot find name '_'.
    